<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pedidos médicos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_categorias">Categorias</string>
    <string name="title_activity_platos">Platos</string>
    <string name="title_activity_bebidas">Suplementos</string>
    <string name="title_activity_porciones">Analgesicos</string>
    <string name="title_activity_parrillada">Varios</string>
    <string name="title_activity_mariscos">Antibioticos</string>
    <string name="title_activity_control_menu">Control Menu</string>
    <string name="title_activity_administrador">Administrador</string>
    <string name="title_activity_control_platos">Control de Platos</string>
    <string name="title_activity_menu_list">Menu_list</string>
    <string name="title_activity_lista_platos">ListaPlatos</string>
    <string name="title_activity_carrilto">Carrito de Compras</string>
    <string name="title_activity_registro_sms">Seguridad</string>
    <string name="title_activity_custom_adapter_list2">CustomAdapterList2</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_adapter_list2">AdapterList2</string>
    <string name="title_activity_acerca">Acerca De</string>
    <string name="title_activity_listado_final">Listado Final</string>
    <string name="title_activity_notas">Notas</string>
    <string name="title_activity_listado_pedido">Listado de Pedido</string>
    <string name="title_activity_pedido">Pedido</string>
    <string name="imagen2001">imagen</string>
    <string name="boton2001">tomar foto</string>
    <string name="btnCamara">Camara</string>
    <string name="botonPlay">Play</string>
    <string name="botonStop">Stop</string>
    <string name="indicaciones">Indicaciones de voz</string>
    <string name="btnTalk">Verificar existencia por voz</string>
    <string name="ubi">Ubicanos</string>

</resources>
