<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fodoazul"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.proyecto2pdm115.Antibioticos">


    <ImageView
        android:id="@+id/mainimage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imagen2001"
        android:src="@mipmap/ic_launcher" />
    <Button
        android:id="@+id/mainbttomarfoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/boton2001" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Medicamentos"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listaVista"
        android:layout_width="393dp"
        android:layout_height="450dp"
        android:layout_below="@+id/imageButton3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/circulo"
        android:backgroundTint="@color/teal_700"
        android:src="@android:drawable/ic_menu_revert" />


    <!-- Funcionalidad de pedidos por voz -->
    <Button
        android:id="@+id/bvoice"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="45dp"
        android:text="@string/btnTalk" />

    <ListView
        android:id="@+id/lvVoiceReturn"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="32dp">
    </ListView>

</RelativeLayout>
