<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fodoazul"
    android:clickable="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.proyecto2pdm115.categorias">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Categorias"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffea7324"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/atras"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circulo"
        android:backgroundTint="@color/teal_700"
        android:src="@android:drawable/ic_menu_revert" />

    <ImageButton
        android:id="@+id/cangrejo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/atras"
        android:layout_alignStart="@+id/baquita"
        android:layout_alignLeft="@+id/baquita"
        android:background="@drawable/ovalo"
        android:src="@drawable/cangrejo" />

    <ImageButton
        android:id="@+id/jugo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/atras"
        android:layout_alignStart="@+id/porciones"
        android:layout_alignLeft="@+id/porciones"
        android:background="@drawable/ovalo"
        android:src="@drawable/bebida" />

    <ImageButton
        android:id="@+id/baquita"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/jugo"
        android:layout_toStartOf="@+id/textView"
        android:layout_toLeftOf="@+id/textView"
        android:background="@drawable/ovalo"
        android:src="@drawable/baquita" />

    <ImageButton
        android:id="@+id/porciones"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/cangrejo"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:background="@drawable/ovalo"
        android:src="@drawable/porcion" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="186dp"
        android:layout_height="54dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="98dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/indicaciones"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/botonPlay" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/botonStop" />

    <Button
        android:id="@+id/btnReceta"
        android:layout_width="120dp"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="262dp"
        android:layout_marginBottom="572dp"
        android:backgroundTint="@color/teal_700"
        android:text="Receta" />


</RelativeLayout>
